# browser_captcha_solver

./: .gitignore  LICENSE  MANIFEST.in  README.md  STRUCTURE.md  examples.py  pyproject.toml  requirements.txt
.github/workflows/: test-and-publish.yml
browser_captcha_solver/: __init__.py  cli.py  server.py  solver.py  template_manager.py
browser_captcha_solver/templates/: README.md  base.html  browser_communication.js  hcaptcha_content.html  hcaptcha_js.html  recaptcha_v2_content.html  recaptcha_v3_content.html  recaptcha_v3_error.html  recaptcha_v3_head.html  recaptcha_v3_js.html  styles.css  turnstile_content.html  turnstile_error.html  turnstile_js.html
tests/: test_solver.py
